# C-l-tro

./: .gitignore  CMakeLists.txt  Makefile  README.md  c-l-tro
.cache/clangd/index/: cardProperties.h.8012AD2E59D013AA.idx  deck.cpp.DBD7AD580AF19E68.idx  deck.h.B6C18ACC35D6B946.idx  discardPile.cpp.BFC35F391377940C.idx  discardPile.h.DB64D007F40DB27E.idx  draw.h.880B786E26C3C6C1.idx  hand.cpp.53C378FD34B8C537.idx  hand.h.F2CAF4EAB046AF9E.idx  handTypes.h.7FD4CFDB4B5B8D02.idx  joker.cpp.DB52D0CD07668476.idx  joker.h.C204CE3479AC8D6D.idx  jokerDeck.cpp.33F3F5FA126E6DFA.idx  jokerDeck.h.A4370F1E9FE2A0C0.idx  jokerEffectProperties.h.EDEB8FAF41B3001F.idx  main.cpp.A251B3D78A8095BB.idx  playingCard.cpp.28BDD21942FA390D.idx  playingCard.h.A991988D4FEAC047.idx  points.h.C1F3CDB8C1990E95.idx  shop.h.BAD51EA1BBCF1ABD.idx  tools.cpp.27D5B00C89E7DB08.idx  tools.h.5A6A139A6CA1F2A0.idx
include/: cardProperties.h  deck.h  discardPile.h  draw.h  hand.h  handTypes.h  joker.h  jokerDeck.h  jokerEffectProperties.h  playingCard.h  points.h  shop.h  tools.h
src/: deck.cpp  deck.h  discardPile.cpp  draw.cpp  hand.cpp  hand.h  handTest  handTypes.h  joker.cpp  joker.h  jokerDeck.cpp  jokerDeck.h  jokerDeckTest  main.cpp  playingCard.cpp  playingCard.h  shop.cpp  shuffleTest  sortTest  tools.cpp  tools.h
tests/: hand_test.cpp
